--- a/templates/grafana/grafana-configmap.yml
+++ b/templates/grafana/grafana-configmap.yml
@@ -1,23 +1,22 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-datasources
+  name: grafana-config
   labels:
-    {{- include "grafana.labels" . | nindent 4 }}
+{{ include "grafana.labels" $ | indent 4 }}
   namespace: {{ .Release.Namespace }}
 data:
-  prometheus.yaml: |-
-    {
-        "apiVersion": 1,
-        "datasources": [
-            {
-               "access":"proxy",
-                "editable": true,
-                "name": "prometheus",
-                "orgId": 1,
-                "type": "prometheus",
-                "url": "http://{{ include "prometheus.fullname" . }}-svc.{{ .Release.Namespace }}.svc:{{ $.Values.prometheus.service.port }}",
-                "version": 1
-            }
-        ]
-    }
+  grafana.ini: |
+    [analytics]
+    check_for_updates = true
+    [grafana_net]
+    url = https://grafana.net
+    [log]
+    mode = console
+    [paths]
+    data = /var/lib/grafana/
+    logs = /var/log/grafana
+    plugins = /var/lib/grafana/plugins
+    provisioning = /etc/grafana/provisioning
+    [server]
+    domain = ''
