--- a/templates/prometheus/prometheus-clusterrole.yml
+++ b/templates/prometheus/prometheus-clusterrole.yml
@@ -18,10 +18,15 @@ rules:
   - pods
   verbs: ["get", "list", "watch"]
 - apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs: ["get", "list", "watch"]
+- apiGroups:
   - extensions
   resources:
   - ingresses
   verbs: ["get", "list", "watch"]
-- nonResourceURLs: ["/metrics"]
+- nonResourceURLs: ["/metrics", "/metrics/cadvisor"]
   verbs: ["get"]
 {{- end }}
